[gd_scene load_steps=9 format=2]

[ext_resource path="res://TestEnv/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://TestEnv/Assets/Player/Walk/walk_1.tres" type="Texture" id=2]
[ext_resource path="res://TestEnv/Assets/Player/Head/Head_0.tres" type="Texture" id=3]
[ext_resource path="res://TestEnv/Assets/Player/Walk/walk_2.tres" type="Texture" id=4]
[ext_resource path="res://TestEnv/Assets/Player/Walk/walk_0.tres" type="Texture" id=5]
[ext_resource path="res://TestEnv/Assets/Player/FlamePistol/flame_pistol.tres" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Character" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Head" type="Sprite" parent="Body"]
position = Vector2( -1.33635, -36.9723 )
texture = ExtResource( 3 )

[node name="Hand" type="Sprite" parent="Body"]
position = Vector2( -7.87627, -14.0017 )
texture = ExtResource( 8 )
offset = Vector2( 17, 3 )

[node name="GunPoint" type="Node2D" parent="Body/Hand"]
position = Vector2( 42.876, 0 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
